--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -5,4 +5,10 @@
     align-items: center;
     flex-direction: column;
     padding: 0.5rem 1rem;
+    margin: 1rem;
+    transition: transform 0.2s;
+}
+
+.card:hover{
+    transform: scale(1.05);
 }
