--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -77,51 +77,12 @@
 }
 
 /* Responsividade para telas maiores (PC) */
-@media (min-width: 768px) {
-    .menuButton {
-        display: none;
-    }
-
-    .nav {
-        position: static;
-        transform: translateX(0);
-        background: none;
-        border: none;
-        box-shadow: none;
-        display: flex;
-        justify-content: flex-end;
-    }
-
-    .navList {
-        display: flex;
-        gap: 2rem;
-    }
-
-    .navList li {
-        margin: 0;
-    }
-
-    /* Barra de progresso no PC */
-    .progressBar {
-        position: fixed;
+@media (min-width: 576px) {
+    .headerMobile {
+        height: 14vh;
+        width: 50%;
+        justify-content: flex-start!important;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 5px;
-        background-color: #F9F9F9;
-        z-index: 9998;
-    }
-
-    .progressBarInner {
-        width: 0;
-        height: 100%;
-        background-color: #1D4988;
-        transition: width 0.1s linear;
-    }
-}
-
-@media (min-width: 1024px) {
-    .navList {
-        gap: 2.5rem;
     }
 }
