--- a/src/pages/CreateNoticia/CreateNoticia.module.css
+++ b/src/pages/CreateNoticia/CreateNoticia.module.css
@@ -50,3 +50,9 @@
   margin-left: 0.5rem;
   cursor: pointer;
 }
+
+@media (min-width: 576px) {
+  .CreateNoticiaPage {
+    margin: 14vh 0 0 0;
+  }
+}
