--- a/src/pages/PerfilAdm/PerfilAdm.module.css
+++ b/src/pages/PerfilAdm/PerfilAdm.module.css
@@ -84,3 +84,19 @@
     line-height: 1.5rem;
     margin: 0;
 }
+
+@media (min-width: 576px) {
+    .perfilAdmContainer {
+        margin: 14vh 0 0 0;
+    }
+
+    .perfilAdmTitle {
+        font-size: 3rem;
+    }
+
+    .perfilAdmSectionCrudIcons {
+        width: 70%;
+        height: auto;
+        object-fit: contain;
+    }
+}
