--- a/src/pages/SobreNos/SobreNos.module.css
+++ b/src/pages/SobreNos/SobreNos.module.css
@@ -54,3 +54,17 @@
     padding: 0;
     margin-bottom: 0.25rem;
 }
+
+@media (min-width: 576px) {
+    .container {
+        margin: 14vh 0 0 0;
+    }
+}
+
+.image {
+    max-width: 35%;
+}
+
+.image2 {
+    max-width: 20%;
+}
