--- a/src/pages/PerfilLeitor/PerfilLeitor.module.css
+++ b/src/pages/PerfilLeitor/PerfilLeitor.module.css
@@ -31,7 +31,7 @@
 }
 
 .userImageContainer {
-    position: relative; 
+    position: relative;
 }
 
 .userImage {
@@ -46,7 +46,7 @@
 .userPhoto {
     width: 100%;
     height: 100%;
-    object-fit: cover; 
+    object-fit: cover;
 }
 
 .editPhotoOverlay {
@@ -64,10 +64,10 @@
 }
 
 .userImage:hover .editPhotoOverlay {
-    opacity: 1; 
+    opacity: 1;
 }
 
-.userImageContainer p{
+.userImageContainer p {
     text-align: center;
     display: block;
 }
@@ -124,8 +124,20 @@
 
 .favoriteNewsSection {
     width: 100%;
-    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-align: center;
+}
+
+.cardContainer {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    width: 100%;
+    max-width: 80rem;
 }
 
 .sectionTitle {
@@ -188,8 +200,111 @@
     color: #FFD700;
 }
 
+.perfilAdmContainer {
+    min-height: 76vh;
+    margin: 12vh 0;
+    padding: 0.5rem 0.5rem 0;
+    background-color: #EBEBEB;
+}
+
+.perfilAdmInfoContainer {
+    min-height: calc(76vh - 0.5rem);
+    padding: 0.5rem;
+    background-color: #F9F9F9;
+}
+
+.perfilAdmSectionFirst {
+    padding-bottom: 1rem;
+    border-bottom: 0.25rem solid rgb(235, 235, 235, 0.5);
+}
+
+.perfilAdmSection {
+    padding: 1rem 0;
+    border-bottom: 0.25rem solid rgb(235, 235, 235, 0.5);
+}
+
+.perfilAdmSectionLast {
+    padding-top: 1rem;
+}
+
+.perfilAdmSectionTitle {
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-align: center;
+    color: #1D4988;
+    margin: 0;
+}
+
+.perfilAdmContainerUserImage {
+    width: 100%;
+    height: 100%;
+    padding: 1.75rem;
+    border-radius: 50%;
+    background-color: #EBEBEB;
+}
+
+.perfilAdmUserImage {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
+.perfilAdmTitle {
+    font-size: 2rem;
+    color: #1D4988;
+    text-align: center;
+    margin: 0;
+}
+
+.perfilAdmSectionCrudIcons {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
+.perfilAdmSectionCrudButton {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #1D4988;
+    background-color: #F9F9F9;
+    border-radius: 5px;
+    margin: 0.25rem;
+    padding: 0.25rem 0.5rem 0.4rem;
+    border: 2px solid #1D4988;
+}
+
+.perfilAdmSectionCrudButton:hover,
+.perfilAdmSectionCrudButton:focus,
+.perfilAdmSectionCrudButton:active {
+    background-color: #1D4988;
+    color: #F9F9F9;
+    box-shadow: #1D4988;
+}
+
+.perfilAdmSectionCrudButtonText {
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    margin: 0;
+}
+
 @media (min-width: 576px) {
     .perfilLeitorContainer {
         margin: 14vh 0 0 0;
+    }
+
+    .perfilAdmContainer {
+        margin: 14vh 0 0 0;
+    }
+
+    .perfilAdmTitle {
+        font-size: 3rem;
+    }
+
+    .perfilAdmSectionCrudIcons {
+        width: 70%;
+        height: auto;
+        object-fit: contain;
     }
 }
